--- a/css/styles.css
+++ b/css/styles.css
@@ -10951,6 +10951,7 @@ html {
   width: 50px;
   height: 50px;
   text-align: center;
+  text-decoration: none;
   color: #fff;
   background: rgba(52, 58, 64, 0.5);
   line-height: 50px;
