--- a/css/quiz.css
+++ b/css/quiz.css
@@ -124,6 +124,13 @@
     box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.1);
 }
 
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+
+
+
 .quiz_box header .title{
     font-size: 20px;
     font-weight: 600;
@@ -404,5 +411,38 @@ footer button.show{
     }
     .buttons button {
         height: 60px !important;
+    }
+    .quiz_box{
+        height: 100vh;
+    }
+    .quiz_box header{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
+       
+    .quiz_box header .title{
+        width: calc(100% - 145px);
+        font-size: calc(100vh/35);
+        line-height: calc(100vh / 35);
+    }
+
+    .quiz_box header .timer {
+        right: 5px;
+        position: absolute;
+
+    }
+
+    section{
+        overflow: scroll;
+        height: calc(100vh - 130px);
+        margin-top: 70px;
+    }
+
+    footer{
+        position: fixed;
+        width: 100%;
+        bottom: 0;
     }
 }
