--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,6 +1,13 @@
 /* importing google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
+
+/* prevent mobile reload */
+html {
+    overflow: hidden;
+    overscroll-behavior: none;
+  }
+
 .start_btn,
 .info_box,
 .quiz_box,
@@ -413,7 +420,7 @@ footer button.show{
         height: 60px !important;
     }
     .quiz_box{
-        height: 100vh;
+        height: 98vh;
     }
     .quiz_box header{
         position: fixed;
@@ -424,8 +431,8 @@ footer button.show{
        
     .quiz_box header .title{
         width: calc(100% - 145px);
-        font-size: calc(100vh/35);
-        line-height: calc(100vh / 35);
+        font-size: calc(98vh/35);
+        line-height: calc(98vh / 35);
     }
 
     .quiz_box header .timer {
@@ -436,7 +443,7 @@ footer button.show{
 
     section{
         overflow: scroll;
-        height: calc(100vh - 130px);
+        height: calc(98vh - 130px);
         margin-top: 70px;
     }
 
